# concordium-wallet-proxy

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  API.md  Cargo.toml  ChangeLog.md  Dockerfile  Jenkinsfile  README.md  fourmolu.yaml  package.yaml  stack  stack.yaml  submissionStatus.md
.github/workflows/: ci-haskell.yaml  ci-rust.yaml  ci.yaml  release-docker-image.yaml
app/: Main.hs
docker/: docker-entrypoint.sh  docker-entrypoint_k8s-statefulset.sh
docs/diagrams/: wallet-proxy.drawio
examples/: cdi.json  identity-providers-with-metadata-v1.json  identity-providers-with-metadata-v2.json  identity-providers-with-metadata.json  initial-account.json
scripts/: Dockerfile  docker-entrypoint.sh  docker-entrypoint_k8s-statefulset.sh  start.sh
src/: Internationalization.hs  Lib.hs  Logging.hs  Proxy.hs  Transak.hs
src/Internationalization/: Base.hs  En.hs
test/: Spec.hs
test/fixtures/: meta-update-lock-created.json  meta-update-lock-destroyed.json  meta-update-token-transfer-locks.json
wallet-proxy-service/: API.md  CHANGELOG.md  Cargo.toml  README.md
wallet-proxy-service/src/: configuration.rs  lib.rs  metrics_registry.rs  monitoring_api.rs  rest_api.rs  router.rs  service.rs
wallet-proxy-service/src/monitoring/: database_metrics_collector.rs  mod.rs
