[workspace]
resolver = "3"

members = [
   "wallet-proxy-service"
]

# Exclude crates in submodules
exclude = ["deps"]

[workspace.package]
authors = ["Concordium <developers@concordium.com>"]
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.99"
axum = { version = "0.8.4", features = ["http2"] }
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.47", features = ["derive", "env", "cargo"] }
concordium-rust-sdk = { path = "deps/concordium-rust-sdk" }
futures-util = "0.3.31"
prometheus-client = "0.24.0"
serde = "1.0.219"
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "sync", "signal"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = { version = "0.7.16", features = ["rt"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
