[package]
name = "wallet-proxy"
version.workspace = true
edition = "2024"
description = "Wallet Proxy Service (exposes Wallet Proxy API)"
authors.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
clap.workspace = true
concordium-rust-sdk.workspace = true
dotenvy.workspace = true
futures-util.workspace = true
prometheus-client.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
